FIx dataGroup wrapping weirdness
- bug found using chrome on ubuntu
- 3+ dataGroups in list rendered strangely...
- 3rd would be aligned right and 4th would be on new line
- meant to be 2-3 per line for BP > XS
- solution: made row flex, with utility class to wrap

--- a/src/assets/style/_utilities.scss
+++ b/src/assets/style/_utilities.scss
@@ -14,4 +14,7 @@
   &--dull-if-null {
     color: #2e2e2e;
   }
+  &--flex-wrap {
+    flex-wrap: wrap;
+  }
 }
